# zhihu-skills

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
scripts/: chrome_launcher.py  cli.py
scripts/cdp_engine/: __init__.py  cdp.py  errors.py  stealth.py
scripts/zhihu/: __init__.py  answer.py  article.py  errors.py  invitation.py  login.py  question.py  search.py  selectors.py  types.py  urls.py
skills/zhihu-auth/: SKILL.md
skills/zhihu-author/: SKILL.md
skills/zhihu-explore/: SKILL.md
